--- a/Bsp/Robomaster_C/Robomaster_C.ioc
+++ b/Bsp/Robomaster_C/Robomaster_C.ioc
@@ -121,27 +121,28 @@ Mcu.CPN=STM32F407IGH6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP10=SYS
-Mcu.IP11=TIM1
-Mcu.IP12=TIM3
-Mcu.IP13=TIM4
-Mcu.IP14=TIM5
-Mcu.IP15=TIM6
-Mcu.IP16=TIM7
-Mcu.IP17=TIM8
-Mcu.IP18=TIM10
-Mcu.IP19=USART1
+Mcu.IP10=SPI1
+Mcu.IP11=SYS
+Mcu.IP12=TIM1
+Mcu.IP13=TIM3
+Mcu.IP14=TIM4
+Mcu.IP15=TIM5
+Mcu.IP16=TIM6
+Mcu.IP17=TIM7
+Mcu.IP18=TIM8
+Mcu.IP19=TIM10
 Mcu.IP2=CAN1
-Mcu.IP20=USART3
-Mcu.IP21=USART6
+Mcu.IP20=USART1
+Mcu.IP21=USART3
+Mcu.IP22=USART6
 Mcu.IP3=CAN2
 Mcu.IP4=DMA
-Mcu.IP5=I2C3
-Mcu.IP6=IWDG
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SPI1
-Mcu.IPNb=22
+Mcu.IP5=I2C2
+Mcu.IP6=I2C3
+Mcu.IP7=IWDG
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=23
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PB5
@@ -151,52 +152,54 @@ Mcu.Pin11=PI7
 Mcu.Pin12=PI6
 Mcu.Pin13=PG9
 Mcu.Pin14=PD1
-Mcu.Pin15=PA9
-Mcu.Pin16=PC9
-Mcu.Pin17=PA8
-Mcu.Pin18=PH0-OSC_IN
-Mcu.Pin19=PC8
+Mcu.Pin15=PF0
+Mcu.Pin16=PA9
+Mcu.Pin17=PC9
+Mcu.Pin18=PA8
+Mcu.Pin19=PH0-OSC_IN
 Mcu.Pin2=PB4
-Mcu.Pin20=PH1-OSC_OUT
-Mcu.Pin21=PC6
-Mcu.Pin22=PG6
-Mcu.Pin23=PF6
-Mcu.Pin24=PH12
-Mcu.Pin25=PG3
-Mcu.Pin26=PF10
-Mcu.Pin27=PH11
-Mcu.Pin28=PH10
-Mcu.Pin29=PD14
+Mcu.Pin20=PC8
+Mcu.Pin21=PH1-OSC_OUT
+Mcu.Pin22=PF1
+Mcu.Pin23=PC6
+Mcu.Pin24=PG6
+Mcu.Pin25=PF6
+Mcu.Pin26=PH12
+Mcu.Pin27=PG3
+Mcu.Pin28=PF10
+Mcu.Pin29=PH11
 Mcu.Pin3=PB3
-Mcu.Pin30=PA0-WKUP
-Mcu.Pin31=PA4
-Mcu.Pin32=PC4
-Mcu.Pin33=PE13
-Mcu.Pin34=PC5
-Mcu.Pin35=PE9
-Mcu.Pin36=PE11
-Mcu.Pin37=PE14
-Mcu.Pin38=PA7
-Mcu.Pin39=PB0
+Mcu.Pin30=PH10
+Mcu.Pin31=PD14
+Mcu.Pin32=PA0-WKUP
+Mcu.Pin33=PA4
+Mcu.Pin34=PC4
+Mcu.Pin35=PE13
+Mcu.Pin36=PC5
+Mcu.Pin37=PE9
+Mcu.Pin38=PE11
+Mcu.Pin39=PE14
 Mcu.Pin4=PA14
-Mcu.Pin40=VP_ADC1_TempSens_Input
-Mcu.Pin41=VP_ADC1_Vref_Input
-Mcu.Pin42=VP_IWDG_VS_IWDG
-Mcu.Pin43=VP_SYS_VS_Systick
-Mcu.Pin44=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin40=PA7
+Mcu.Pin41=PB0
+Mcu.Pin42=VP_ADC1_TempSens_Input
+Mcu.Pin43=VP_ADC1_Vref_Input
+Mcu.Pin44=VP_IWDG_VS_IWDG
+Mcu.Pin45=VP_SYS_VS_Systick
+Mcu.Pin46=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin5=PA13
-Mcu.Pin50=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin50=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin6=PB7
 Mcu.Pin7=PB6
 Mcu.Pin8=PD0
 Mcu.Pin9=PC11
-Mcu.PinsNb=52
+Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -218,6 +221,8 @@ NVIC.EXTI4_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -352,6 +357,10 @@ PE9.GPIO_PuPd=GPIO_PULLUP
 PE9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PE9.Locked=true
 PE9.Signal=S_TIM1_CH1
+PF0.Mode=I2C
+PF0.Signal=I2C2_SDA
+PF1.Mode=I2C
+PF1.Signal=I2C2_SCL
 PF10.GPIOParameters=GPIO_Label
 PF10.GPIO_Label=ADC_BAT
 PF10.Locked=true
@@ -522,11 +531,12 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Prescaler,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Prescaler,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,AutoReloadPreload
 TIM1.Period=19999
 TIM1.Prescaler=167
 TIM1.Pulse-PWM\ Generation1\ CH1=0
@@ -555,10 +565,11 @@ TIM6.Prescaler=83
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=1000-1
 TIM7.Prescaler=84-1
+TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2,Channel-PWM Generation3 CH3,AutoReloadPreload
 TIM8.Period=19999
 TIM8.Prescaler=167
 TIM8.Pulse-PWM\ Generation2\ CH2=0
