--- a/Bsp/Robomaster_C/Robomaster_C.ioc
+++ b/Bsp/Robomaster_C/Robomaster_C.ioc
@@ -111,6 +111,8 @@ Dma.USART6_TX.4.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART6_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.I2C_Mode=I2C_Fast
+I2C2.IPParameters=I2C_Mode
 I2C3.I2C_Mode=I2C_Fast
 I2C3.IPParameters=I2C_Mode
 IWDG.IPParameters=Prescaler,Reload
@@ -453,7 +455,7 @@ ProjectManager.TemplateDestinationPath=F\:\\\u4EA4\u5927\\robomaster\\\u6821\u96
 ProjectManager.TemplateSourcePath=D\:\\Stm32Cube5.2.1\\db\\extra_templates
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_CAN2_Init-CAN2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_I2C3_Init-I2C3-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM10_Init-TIM10-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART6_UART_Init-USART6-false-HAL-true,19-MX_TIM6_Init-TIM6-false-HAL-true,20-MX_IWDG_Init-IWDG-false-HAL-true,21-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_CAN2_Init-CAN2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_I2C3_Init-I2C3-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM10_Init-TIM10-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART6_UART_Init-USART6-false-HAL-true,19-MX_TIM6_Init-TIM6-false-HAL-true,20-MX_IWDG_Init-IWDG-false-HAL-true,21-MX_TIM7_Init-TIM7-false-HAL-true,22-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
