--- a/Bsp/Robomaster_C/Robomaster_C.ioc
+++ b/Bsp/Robomaster_C/Robomaster_C.ioc
@@ -232,7 +232,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:7\:0\:true\:false\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:12\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.USART1_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
