--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -26,51 +26,29 @@ CAN2.CalculateTimeQuantum=71.42857142857143
 CAN2.IPParameters=CalculateTimeQuantum,BS1,SJW,Prescaler,BS2,CalculateTimeBit,CalculateBaudRate
 CAN2.Prescaler=3
 CAN2.SJW=CAN_SJW_2TQ
-Dma.Request0=USART2_TX
-Dma.Request1=USART2_RX
-Dma.Request2=SPI2_RX
-Dma.Request3=SPI2_TX
-Dma.RequestsNb=4
-Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_RX.2.Instance=DMA1_Stream3
-Dma.SPI2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.2.Mode=DMA_NORMAL
-Dma.SPI2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.SPI2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI2_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_TX.3.Instance=DMA1_Stream4
-Dma.SPI2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_TX.3.Mode=DMA_NORMAL
-Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_TX.3.Priority=DMA_PRIORITY_HIGH
-Dma.SPI2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.1.Instance=DMA1_Stream5
-Dma.USART2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.1.Mode=DMA_NORMAL
-Dma.USART2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.1.Priority=DMA_PRIORITY_MEDIUM
-Dma.USART2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_TX.0.Instance=DMA1_Stream6
-Dma.USART2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.0.Mode=DMA_NORMAL
-Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.0.Priority=DMA_PRIORITY_MEDIUM
-Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=SPI2_RX
+Dma.Request1=SPI2_TX
+Dma.RequestsNb=2
+Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.0.Instance=DMA1_Stream3
+Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.0.Mode=DMA_NORMAL
+Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_TX.1.Instance=DMA1_Stream4
+Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.1.Mode=DMA_NORMAL
+Dma.SPI2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -163,8 +141,6 @@ NVIC.CAN2_RX0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.CAN2_TX_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.EXTI3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
@@ -380,6 +356,8 @@ ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x8000
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM7_Init-TIM7-false-HAL-true,18-MX_USART3_UART_Init-USART3-false-HAL-true,19-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.AHBFreq_Value=168000000
@@ -488,7 +466,7 @@ UART5.VirtualMode=Asynchronous
 USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=115200
+USART2.BaudRate=19200
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 USART3.BaudRate=100000
