--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -64,10 +64,10 @@ Mcu.IP12=TIM2
 Mcu.IP13=TIM3
 Mcu.IP14=TIM7
 Mcu.IP15=TIM8
-Mcu.IP16=UART5
-Mcu.IP17=USART1
-Mcu.IP18=USART2
-Mcu.IP19=USART3
+Mcu.IP16=UART4
+Mcu.IP17=UART5
+Mcu.IP18=USART1
+Mcu.IP19=USART2
 Mcu.IP2=CAN2
 Mcu.IP3=DMA
 Mcu.IP4=I2C1
@@ -111,26 +111,27 @@ Mcu.Pin34=PA13
 Mcu.Pin35=PA14
 Mcu.Pin36=PA15
 Mcu.Pin37=PC10
-Mcu.Pin38=PC12
-Mcu.Pin39=PD2
+Mcu.Pin38=PC11
+Mcu.Pin39=PC12
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=PB3
-Mcu.Pin41=PB4
-Mcu.Pin42=PB5
-Mcu.Pin43=PB6
-Mcu.Pin44=PB7
-Mcu.Pin45=PB8
-Mcu.Pin46=PB9
-Mcu.Pin47=VP_IWDG_VS_IWDG
-Mcu.Pin48=VP_SYS_VS_Systick
-Mcu.Pin49=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin40=PD2
+Mcu.Pin41=PB3
+Mcu.Pin42=PB4
+Mcu.Pin43=PB5
+Mcu.Pin44=PB6
+Mcu.Pin45=PB7
+Mcu.Pin46=PB8
+Mcu.Pin47=PB9
+Mcu.Pin48=VP_IWDG_VS_IWDG
+Mcu.Pin49=VP_SYS_VS_Systick
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin50=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=51
+Mcu.PinsNb=52
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
@@ -155,10 +156,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM7_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UART5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA0-WKUP.GPIO_Mode=GPIO_MODE_ANALOG
@@ -273,7 +274,10 @@ PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC10.Locked=true
 PC10.Mode=Asynchronous
-PC10.Signal=USART3_TX
+PC10.Signal=UART4_TX
+PC11.Locked=true
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
 PC12.Locked=true
 PC12.Mode=Asynchronous
 PC12.Signal=UART5_TX
@@ -316,7 +320,6 @@ PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_PuPd
 PC5.GPIO_PuPd=GPIO_NOPULL
 PC5.Locked=true
-PC5.Mode=Asynchronous
 PC5.Signal=USART3_RX
 PC6.Locked=true
 PC6.Signal=S_TIM8_CH1
@@ -462,6 +465,9 @@ TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM8.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+UART4.BaudRate=921600
+UART4.IPParameters=VirtualMode,BaudRate
+UART4.VirtualMode=Asynchronous
 UART5.BaudRate=921600
 UART5.IPParameters=VirtualMode,BaudRate
 UART5.VirtualMode=Asynchronous
@@ -471,13 +477,6 @@ USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=19200
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
-USART3.BaudRate=100000
-USART3.IPParameters=VirtualMode,BaudRate,WordLength,Parity,StopBits,Mode
-USART3.Mode=MODE_RX
-USART3.Parity=PARITY_EVEN
-USART3.StopBits=STOPBITS_2
-USART3.VirtualMode=VM_ASYNC
-USART3.WordLength=WORDLENGTH_9B
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
