--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -322,7 +322,7 @@ PC5.GPIO_PuPd=GPIO_NOPULL
 PC5.Locked=true
 PC5.Signal=USART3_RX
 PC6.Locked=true
-PC6.Signal=S_TIM8_CH1
+PC6.Signal=GPIO_Input
 PC7.Signal=S_TIM8_CH2
 PC8.Signal=S_TIM8_CH3
 PC9.Signal=S_TIM8_CH4
@@ -364,7 +364,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM7_Init-TIM7-false-HAL-true,18-MX_USART3_UART_Init-USART3-false-HAL-true,19-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM7_Init-TIM7-false-HAL-true,18-MX_IWDG_Init-IWDG-false-HAL-true,19-MX_UART4_Init-UART4-false-HAL-true
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
@@ -426,8 +426,6 @@ SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
-SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
@@ -460,11 +458,10 @@ TIM3.Period=4999
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=1000 - 1
 TIM7.Prescaler=84 - 1
-TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+TIM8.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
 UART4.BaudRate=921600
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
