--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -321,6 +321,8 @@ PC5.GPIOParameters=GPIO_PuPd
 PC5.GPIO_PuPd=GPIO_NOPULL
 PC5.Locked=true
 PC5.Signal=USART3_RX
+PC6.GPIOParameters=GPIO_PuPd
+PC6.GPIO_PuPd=GPIO_PULLDOWN
 PC6.Locked=true
 PC6.Signal=GPIO_Input
 PC7.Signal=S_TIM8_CH2
