--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -325,7 +325,11 @@ PC6.GPIOParameters=GPIO_PuPd
 PC6.GPIO_PuPd=GPIO_PULLDOWN
 PC6.Locked=true
 PC6.Signal=GPIO_Input
-PC7.Signal=S_TIM8_CH2
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC7.GPIO_Label=LIGHT_PIN
+PC7.GPIO_PuPd=GPIO_PULLDOWN
+PC7.Locked=true
+PC7.Signal=GPIO_Output
 PC8.Signal=S_TIM8_CH3
 PC9.Signal=S_TIM8_CH4
 PD2.Locked=true
@@ -428,8 +432,6 @@ SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
-SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
@@ -460,10 +462,9 @@ TIM3.Period=4999
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=1000 - 1
 TIM7.Prescaler=84 - 1
-TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+TIM8.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3
 UART4.BaudRate=921600
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
