--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -154,8 +154,8 @@ Mcu.PinsNb=51
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
-MxCube.Version=6.8.1
-MxDb.Version=DB.6.0.81
+MxCube.Version=6.11.1
+MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.CAN1_TX_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
@@ -362,7 +362,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446RCTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x10000
@@ -380,6 +380,8 @@ ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x8000
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM7_Init-TIM7-false-HAL-true,18-MX_USART3_UART_Init-USART3-false-HAL-true,19-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.AHBFreq_Value=168000000
