--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -30,7 +30,9 @@ Dma.Request0=USART2_TX
 Dma.Request1=USART2_RX
 Dma.Request2=SPI2_RX
 Dma.Request3=SPI2_TX
-Dma.RequestsNb=4
+Dma.Request4=TIM8_UP
+Dma.Request5=TIM1_UP
+Dma.RequestsNb=6
 Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_RX.2.Instance=DMA1_Stream3
@@ -51,6 +53,29 @@ Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.3.Priority=DMA_PRIORITY_HIGH
 Dma.SPI2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM1_UP.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM1_UP.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM1_UP.5.Instance=DMA2_Stream5
+Dma.TIM1_UP.5.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_UP.5.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_UP.5.Mode=DMA_NORMAL
+Dma.TIM1_UP.5.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_UP.5.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_UP.5.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM1_UP.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM8_UP.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM8_UP.4.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.TIM8_UP.4.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.TIM8_UP.4.Instance=DMA2_Stream1
+Dma.TIM8_UP.4.MemBurst=DMA_MBURST_SINGLE
+Dma.TIM8_UP.4.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM8_UP.4.MemInc=DMA_MINC_ENABLE
+Dma.TIM8_UP.4.Mode=DMA_NORMAL
+Dma.TIM8_UP.4.PeriphBurst=DMA_PBURST_SINGLE
+Dma.TIM8_UP.4.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM8_UP.4.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM8_UP.4.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM8_UP.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.1.Instance=DMA1_Stream5
@@ -80,15 +105,17 @@ Mcu.IP0=ADC1
 Mcu.IP1=CAN1
 Mcu.IP10=SPI2
 Mcu.IP11=SYS
-Mcu.IP12=TIM2
-Mcu.IP13=TIM3
-Mcu.IP14=TIM7
-Mcu.IP15=TIM8
-Mcu.IP16=UART5
-Mcu.IP17=USART1
-Mcu.IP18=USART2
-Mcu.IP19=USART3
+Mcu.IP12=TIM1
+Mcu.IP13=TIM2
+Mcu.IP14=TIM3
+Mcu.IP15=TIM5
+Mcu.IP16=TIM7
+Mcu.IP17=TIM8
+Mcu.IP18=UART5
+Mcu.IP19=USART1
 Mcu.IP2=CAN2
+Mcu.IP20=USART2
+Mcu.IP21=USART3
 Mcu.IP3=DMA
 Mcu.IP4=I2C1
 Mcu.IP5=I2C3
@@ -96,7 +123,7 @@ Mcu.IP6=IWDG
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SPI1
-Mcu.IPNb=20
+Mcu.IPNb=22
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -143,14 +170,17 @@ Mcu.Pin45=PB8
 Mcu.Pin46=PB9
 Mcu.Pin47=VP_IWDG_VS_IWDG
 Mcu.Pin48=VP_SYS_VS_Systick
-Mcu.Pin49=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin50=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=51
+Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
@@ -165,6 +195,8 @@ NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:6\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream5_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.EXTI3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
@@ -340,11 +372,30 @@ PC5.GPIO_PuPd=GPIO_NOPULL
 PC5.Locked=true
 PC5.Mode=Asynchronous
 PC5.Signal=USART3_RX
+PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PC6.GPIO_Label=DSHOT6
+PC6.GPIO_PuPd=GPIO_NOPULL
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC6.Locked=true
-PC6.Signal=S_TIM8_CH1
-PC7.Signal=S_TIM8_CH2
-PC8.Signal=S_TIM8_CH3
-PC9.Signal=S_TIM8_CH4
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PC7.GPIO_Label=DSHOT7
+PC7.GPIO_PuPd=GPIO_NOPULL
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PC8.GPIO_Label=DSHOT8
+PC8.GPIO_PuPd=GPIO_NOPULL
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PC9.GPIO_Label=DSHOT9
+PC9.GPIO_PuPd=GPIO_NOPULL
+PC9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PD2.Locked=true
 PD2.Mode=Asynchronous
 PD2.Signal=UART5_RX
@@ -355,6 +406,7 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -383,7 +435,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM7_Init-TIM7-false-HAL-true,18-MX_USART3_UART_Init-USART3-false-HAL-true,19-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_TIM3_Init-TIM3-false-HAL-true,15-MX_TIM2_Init-TIM2-false-HAL-true,16-MX_TIM7_Init-TIM7-false-HAL-true,17-MX_USART3_UART_Init-USART3-false-HAL-true,18-MX_IWDG_Init-IWDG-false-HAL-true,19-MX_TIM5_Init-TIM5-false-HAL-true,20-MX_TIM8_Init-TIM8-false-HAL-true,21-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
@@ -445,14 +497,6 @@ SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
-SH.S_TIM8_CH1.ConfNb=1
-SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
-SH.S_TIM8_CH2.ConfNb=1
-SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
-SH.S_TIM8_CH3.ConfNb=1
-SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
-SH.S_TIM8_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -468,6 +512,10 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM1.Period=11-1
+TIM1.Prescaler=17-1
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload
@@ -476,14 +524,14 @@ TIM2.Prescaler=42 - 1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Period
 TIM3.Period=4999
-TIM7.IPParameters=Prescaler,Period
+TIM7.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM7.Period=1000 - 1
 TIM7.Prescaler=84 - 1
-TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+TIM7.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM8.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM8.Period=11-1
+TIM8.Prescaler=17-1
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 UART5.BaudRate=921600
 UART5.IPParameters=VirtualMode,BaudRate
 UART5.VirtualMode=Asynchronous
@@ -504,8 +552,14 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
