--- a/BSP/Robomaster_C/Robomaster_C.ioc
+++ b/BSP/Robomaster_C/Robomaster_C.ioc
@@ -205,8 +205,8 @@ Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
-MxCube.Version=6.8.1
-MxDb.Version=DB.6.0.81
+MxCube.Version=6.13.0
+MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.CAN2_RX0_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
@@ -418,7 +418,7 @@ PI7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PI7.Locked=true
 PI7.Signal=S_TIM8_CH3
 PinOutPanel.CurrentBGAView=Top
-PinOutPanel.RotationAngle=0
+PinOutPanel.RotationAngle=90
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
@@ -428,7 +428,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407IGHx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x10000
@@ -448,6 +448,8 @@ ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.TemplateDestinationPath=F\:\\\u4EA4\u5927\\robomaster\\\u6821\u961F\\Development-Board-C-Examples\\standard_robot
 ProjectManager.TemplateSourcePath=D\:\\Stm32Cube5.2.1\\db\\extra_templates
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_CAN2_Init-CAN2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_I2C3_Init-I2C3-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM10_Init-TIM10-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART6_UART_Init-USART6-false-HAL-true,19-MX_TIM6_Init-TIM6-false-HAL-true,20-MX_IWDG_Init-IWDG-false-HAL-true,21-MX_TIM7_Init-TIM7-false-HAL-true,22-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
