fix(BSP): 修复RoboMaster A开发板CAN、UART引脚分配错误

--- a/BSP/Robomaster_A/Robomaster_A.ioc
+++ b/BSP/Robomaster_A/Robomaster_A.ioc
@@ -9,23 +9,24 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CAN1.ABOM=ENABLE
-CAN1.AWUM=ENABLE
 CAN1.BS1=CAN_BS1_10TQ
 CAN1.BS2=CAN_BS2_3TQ
 CAN1.CalculateBaudRate=1000000
 CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=71.42857142857143
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS2,BS1,SJW,AWUM,NART,ABOM
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS2,BS1,Prescaler,ABOM,NART
 CAN1.NART=ENABLE
 CAN1.Prescaler=3
-CAN1.SJW=CAN_SJW_1TQ
+CAN2.ABOM=DISABLE
 CAN2.BS1=CAN_BS1_10TQ
 CAN2.BS2=CAN_BS2_3TQ
 CAN2.CalculateBaudRate=1000000
 CAN2.CalculateTimeBit=1000
 CAN2.CalculateTimeQuantum=71.42857142857143
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS2,BS1,Prescaler
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS2,BS1,ABOM,NART,SJW
+CAN2.NART=DISABLE
 CAN2.Prescaler=3
+CAN2.SJW=CAN_SJW_2TQ
 Dma.Request0=TIM1_UP
 Dma.RequestsNb=1
 Dma.TIM1_UP.0.Direction=DMA_MEMORY_TO_PERIPH
@@ -45,99 +46,104 @@ Mcu.CPN=STM32F427IIH6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=TIM1
-Mcu.IP11=TIM2
-Mcu.IP12=TIM4
-Mcu.IP13=TIM5
-Mcu.IP14=TIM7
-Mcu.IP15=TIM8
-Mcu.IP16=TIM12
-Mcu.IP17=UART7
-Mcu.IP18=UART8
-Mcu.IP19=USART1
+Mcu.IP10=SYS
+Mcu.IP11=TIM1
+Mcu.IP12=TIM2
+Mcu.IP13=TIM4
+Mcu.IP14=TIM5
+Mcu.IP15=TIM7
+Mcu.IP16=TIM8
+Mcu.IP17=TIM12
+Mcu.IP18=UART7
+Mcu.IP19=UART8
 Mcu.IP2=CAN2
-Mcu.IP20=USART2
-Mcu.IP21=USART3
-Mcu.IP22=USART6
-Mcu.IP23=USB_OTG_FS
+Mcu.IP20=USART1
+Mcu.IP21=USART2
+Mcu.IP22=USART3
+Mcu.IP23=USART6
+Mcu.IP24=USB_OTG_FS
 Mcu.IP3=DMA
 Mcu.IP4=I2C2
 Mcu.IP5=IWDG
 Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SPI4
-Mcu.IP9=SYS
-Mcu.IPNb=24
+Mcu.IP9=SPI5
+Mcu.IPNb=25
 Mcu.Name=STM32F427I(G-I)Hx
 Mcu.Package=UFBGA176
-Mcu.Pin0=PE2
-Mcu.Pin1=PE1
-Mcu.Pin10=PE4
-Mcu.Pin11=PE5
-Mcu.Pin12=PE6
-Mcu.Pin13=PB9
-Mcu.Pin14=PB7
-Mcu.Pin15=PB6
-Mcu.Pin16=PD6
-Mcu.Pin17=PC11
-Mcu.Pin18=PC10
-Mcu.Pin19=PA12
-Mcu.Pin2=PE0
-Mcu.Pin20=PI7
-Mcu.Pin21=PI6
-Mcu.Pin22=PI5
-Mcu.Pin23=PG9
-Mcu.Pin24=PD5
-Mcu.Pin25=PI2
-Mcu.Pin26=PA11
-Mcu.Pin27=PA10
-Mcu.Pin28=PF0
-Mcu.Pin29=PI0
-Mcu.Pin3=PB8
-Mcu.Pin30=PH0/OSC_IN
-Mcu.Pin31=PH1/OSC_OUT
-Mcu.Pin32=PF1
-Mcu.Pin33=PG8
-Mcu.Pin34=PG7
-Mcu.Pin35=PG6
-Mcu.Pin36=PF7
-Mcu.Pin37=PF6
-Mcu.Pin38=PH12
-Mcu.Pin39=PG5
-Mcu.Pin4=PB5
-Mcu.Pin40=PG4
-Mcu.Pin41=PG3
-Mcu.Pin42=PH11
-Mcu.Pin43=PH10
-Mcu.Pin44=PD15
-Mcu.Pin45=PG2
-Mcu.Pin46=PC2
-Mcu.Pin47=PB2/BOOT1
-Mcu.Pin48=PG1
-Mcu.Pin49=PH6
-Mcu.Pin5=PG14
-Mcu.Pin50=PD14
-Mcu.Pin51=PD13
-Mcu.Pin52=PD12
-Mcu.Pin53=PA2
-Mcu.Pin54=PE11
+Mcu.Pin0=PE1
+Mcu.Pin1=PE0
+Mcu.Pin10=PB7
+Mcu.Pin11=PB6
+Mcu.Pin12=PD6
+Mcu.Pin13=PD0
+Mcu.Pin14=PA12
+Mcu.Pin15=PI7
+Mcu.Pin16=PI6
+Mcu.Pin17=PI5
+Mcu.Pin18=PG9
+Mcu.Pin19=PD5
+Mcu.Pin2=PG14
+Mcu.Pin20=PD1
+Mcu.Pin21=PI2
+Mcu.Pin22=PA11
+Mcu.Pin23=PA10
+Mcu.Pin24=PF0
+Mcu.Pin25=PI0
+Mcu.Pin26=PH0/OSC_IN
+Mcu.Pin27=PH1/OSC_OUT
+Mcu.Pin28=PF1
+Mcu.Pin29=PG8
+Mcu.Pin3=PB3
+Mcu.Pin30=PG7
+Mcu.Pin31=PG6
+Mcu.Pin32=PF7
+Mcu.Pin33=PF6
+Mcu.Pin34=PH12
+Mcu.Pin35=PG5
+Mcu.Pin36=PG4
+Mcu.Pin37=PG3
+Mcu.Pin38=PF9
+Mcu.Pin39=PF8
+Mcu.Pin4=PA15
+Mcu.Pin40=PH11
+Mcu.Pin41=PH10
+Mcu.Pin42=PD15
+Mcu.Pin43=PG2
+Mcu.Pin44=PC2
+Mcu.Pin45=PB2/BOOT1
+Mcu.Pin46=PG1
+Mcu.Pin47=PH6
+Mcu.Pin48=PD14
+Mcu.Pin49=PD13
+Mcu.Pin5=PA14
+Mcu.Pin50=PD12
+Mcu.Pin51=PA2
+Mcu.Pin52=PE8
+Mcu.Pin53=PE11
+Mcu.Pin54=PB12
 Mcu.Pin55=PB13
-Mcu.Pin56=PA3
-Mcu.Pin57=PF14
-Mcu.Pin58=VP_IWDG_VS_IWDG
-Mcu.Pin59=VP_SYS_VS_Systick
-Mcu.Pin6=PB3
-Mcu.Pin60=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin62=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin63=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin64=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin65=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin66=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin7=PA15
-Mcu.Pin8=PA14
-Mcu.Pin9=PA13
-Mcu.PinsNb=67
+Mcu.Pin56=PD9
+Mcu.Pin57=PD8
+Mcu.Pin58=PA3
+Mcu.Pin59=PF14
+Mcu.Pin6=PA13
+Mcu.Pin60=PE7
+Mcu.Pin61=PE12
+Mcu.Pin62=VP_IWDG_VS_IWDG
+Mcu.Pin63=VP_SYS_VS_Systick
+Mcu.Pin64=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin65=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin66=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin67=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin68=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin69=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin7=PE4
+Mcu.Pin70=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin8=PE5
+Mcu.Pin9=PE6
+Mcu.PinsNb=71
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F427IIHx
@@ -188,6 +194,9 @@ PA2.Signal=S_TIM2_CH3
 PA3.GPIOParameters=GPIO_Speed
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Signal=S_TIM2_CH4
+PB12.Locked=true
+PB12.Mode=CAN_Activate
+PB12.Signal=CAN2_RX
 PB13.Mode=CAN_Activate
 PB13.Signal=CAN2_TX
 PB2/BOOT1.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -198,22 +207,18 @@ PB2/BOOT1.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Speed
 PB3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3.Signal=S_TIM2_CH2
-PB5.Mode=CAN_Activate
-PB5.Signal=CAN2_RX
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PB8.Mode=CAN_Activate
-PB8.Signal=CAN1_RX
-PB9.Mode=CAN_Activate
-PB9.Signal=CAN1_TX
-PC10.Mode=Asynchronous
-PC10.Signal=USART3_TX
-PC11.Mode=Asynchronous
-PC11.Signal=USART3_RX
 PC2.Locked=true
 PC2.Signal=ADCx_IN12
+PD0.Locked=true
+PD0.Mode=CAN_Activate
+PD0.Signal=CAN1_RX
+PD1.Locked=true
+PD1.Mode=CAN_Activate
+PD1.Signal=CAN1_TX
 PD12.GPIOParameters=GPIO_Speed
 PD12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD12.Signal=S_TIM4_CH1
@@ -230,6 +235,12 @@ PD5.Mode=Asynchronous
 PD5.Signal=USART2_TX
 PD6.Mode=Asynchronous
 PD6.Signal=USART2_RX
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.Locked=true
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
 PE0.Mode=Asynchronous
 PE0.Signal=UART8_RX
 PE1.Mode=Asynchronous
@@ -239,14 +250,21 @@ PE11.GPIO_Label=LED_RED
 PE11.GPIO_PuPd=GPIO_PULLUP
 PE11.Locked=true
 PE11.Signal=GPIO_Output
-PE2.Mode=Full_Duplex_Master
-PE2.Signal=SPI4_SCK
+PE12.Locked=true
+PE12.Mode=Full_Duplex_Master
+PE12.Signal=SPI4_SCK
 PE4.Mode=NSS_Signal_Hard_Output
 PE4.Signal=SPI4_NSS
 PE5.Mode=Full_Duplex_Master
 PE5.Signal=SPI4_MISO
 PE6.Mode=Full_Duplex_Master
 PE6.Signal=SPI4_MOSI
+PE7.Locked=true
+PE7.Mode=Asynchronous
+PE7.Signal=UART7_RX
+PE8.Locked=true
+PE8.Mode=Asynchronous
+PE8.Signal=UART7_TX
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
 PF1.Mode=I2C
@@ -256,10 +274,18 @@ PF14.GPIO_Label=LED_GREEN
 PF14.GPIO_PuPd=GPIO_PULLUP
 PF14.Locked=true
 PF14.Signal=GPIO_Output
-PF6.Mode=Asynchronous
-PF6.Signal=UART7_RX
-PF7.Mode=Asynchronous
-PF7.Signal=UART7_TX
+PF6.Locked=true
+PF6.Mode=NSS_Signal_Hard_Output
+PF6.Signal=SPI5_NSS
+PF7.Locked=true
+PF7.Mode=Full_Duplex_Master
+PF7.Signal=SPI5_SCK
+PF8.Locked=true
+PF8.Mode=Full_Duplex_Master
+PF8.Signal=SPI5_MISO
+PF9.Locked=true
+PF9.Mode=Full_Duplex_Master
+PF9.Signal=SPI5_MOSI
 PG1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG1.GPIO_Label=LED_G1
 PG1.GPIO_PuPd=GPIO_PULLUP
@@ -366,7 +392,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_UART8_Init-UART8-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true,16-MX_USART6_UART_Init-USART6-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_TIM1_Init-TIM1-false-HAL-true,19-MX_SPI4_Init-SPI4-false-HAL-true,20-MX_ADC1_Init-ADC1-false-HAL-true,21-MX_IWDG_Init-IWDG-false-HAL-true,22-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_UART8_Init-UART8-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true,16-MX_USART6_UART_Init-USART6-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_TIM1_Init-TIM1-false-HAL-true,19-MX_SPI4_Init-SPI4-false-HAL-true,20-MX_ADC1_Init-ADC1-false-HAL-true,21-MX_IWDG_Init-IWDG-false-HAL-true,22-MX_TIM7_Init-TIM7-false-HAL-true,23-MX_USART2_UART_Init-USART2-false-HAL-true,24-MX_SPI5_Init-SPI5-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -447,6 +473,12 @@ SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI4.Mode=SPI_MODE_MASTER
 SPI4.VirtualNSS=VM_NSSHARD
 SPI4.VirtualType=VM_MASTER
+SPI5.CalculateBaudRate=42.0 MBits/s
+SPI5.Direction=SPI_DIRECTION_2LINES
+SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI5.Mode=SPI_MODE_MASTER
+SPI5.VirtualNSS=VM_NSSHARD
+SPI5.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM1.Period=11-1
 TIM1.Prescaler=17-1
