--- a/BSP/Robomaster_A/Robomaster_A.ioc
+++ b/BSP/Robomaster_A/Robomaster_A.ioc
@@ -162,6 +162,8 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI4_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
+NVIC.SPI5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:false
 NVIC.TIM7_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
@@ -253,8 +255,12 @@ PE11.Signal=GPIO_Output
 PE12.Locked=true
 PE12.Mode=Full_Duplex_Master
 PE12.Signal=SPI4_SCK
-PE4.Mode=NSS_Signal_Hard_Output
-PE4.Signal=SPI4_NSS
+PE4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PE4.GPIO_Label=SPI4_NSS1
+PE4.GPIO_PuPd=GPIO_PULLUP
+PE4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PE4.Locked=true
+PE4.Signal=GPIO_Output
 PE5.Mode=Full_Duplex_Master
 PE5.Signal=SPI4_MISO
 PE6.Mode=Full_Duplex_Master
@@ -274,9 +280,13 @@ PF14.GPIO_Label=LED_GREEN
 PF14.GPIO_PuPd=GPIO_PULLUP
 PF14.Locked=true
 PF14.Signal=GPIO_Output
+PF6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PF6.GPIO_Label=SPI5_NSS1
+PF6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF6.GPIO_PuPd=GPIO_PULLUP
+PF6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF6.Locked=true
-PF6.Mode=NSS_Signal_Hard_Output
-PF6.Signal=SPI5_NSS
+PF6.Signal=GPIO_Output
 PF7.Locked=true
 PF7.Mode=Full_Duplex_Master
 PF7.Signal=SPI5_SCK
@@ -467,17 +477,21 @@ SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
-SPI4.CalculateBaudRate=42.0 MBits/s
+SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI4.CLKPhase=SPI_PHASE_2EDGE
+SPI4.CLKPolarity=SPI_POLARITY_HIGH
+SPI4.CalculateBaudRate=656.25 KBits/s
 SPI4.Direction=SPI_DIRECTION_2LINES
-SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI4.Mode=SPI_MODE_MASTER
-SPI4.VirtualNSS=VM_NSSHARD
 SPI4.VirtualType=VM_MASTER
-SPI5.CalculateBaudRate=42.0 MBits/s
+SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI5.CLKPhase=SPI_PHASE_2EDGE
+SPI5.CLKPolarity=SPI_POLARITY_HIGH
+SPI5.CalculateBaudRate=656.25 KBits/s
 SPI5.Direction=SPI_DIRECTION_2LINES
-SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI5.Mode=SPI_MODE_MASTER
-SPI5.VirtualNSS=VM_NSSHARD
 SPI5.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM1.Period=11-1
